--- a/style.css
+++ b/style.css
@@ -104,24 +104,28 @@ div.grid_1{
 	width: 22px;
 	margin-right: 8px;
 	float: left;
+	height: 116px;
 }
 
 div.grid_2{
 	width: 52px;
 	margin-right: 8px;
 	float: left;
+	height: 240px;
 }
 
 div.grid_3{
 	width: 82px;
 	margin-right: 8px;
 	float: left;
+	height: 116px;
 }
 
 div.grid_4{
 	width: 112px;
 	margin-right: 8px;
 	float: left;
+	height: 116px;
 }
 
 div.grid_5{
@@ -321,8 +325,18 @@ div.grid_22{
 
 /*nth style pattern for homepage/projects*/
 img.imagefit{
+	
 	width: 100%;
-	height: auto;
+	height: 100%;
+}
+
+.thumbnailContainer{
+	float: left;
+	width: 100%;
+}
+
+div.homepage_post{
+	overflow: hidden;
 }
 
 
@@ -330,31 +344,39 @@ div.homepage_post:nth-child(23n+1){
 	width: 172px;
 	float: left;
 	margin: 0 8px 10px 0;
+	height: 116px;
+	overflow: hidden;
 }
 
 div.homepage_post:nth-child(23n+2){
 	width:352px;
 	float: left;
 	margin: 0 0px 10px 120px;
+	height: 240px;
+	overflow: hidden;
 }
 
 div.homepage_post:nth-child(23n+3){
 	width: 172px;
 	float: left;
 	margin: 0 8px 70px 0;
+	height: 116px;
+	overflow: hidden;
 }
 
 div.homepage_post:nth-child(23n+4){
 	width: 172px;
 	float: left;
 	margin: 0 8px 70px 0;
-
+	height: 116px;
+	overflow: hidden;
 }
 
 div.homepage_post:nth-child(23n+5){
 	width:262px;
 	float: left;
 	margin: 0 8px 10px 120px;
+	height: 178px;
 
 }
 
@@ -362,13 +384,14 @@ div.homepage_post:nth-child(23n+6){
 	width:262px;
 	float: left;
 	margin: 0 0px 10px 0;
-	height: 188px;
+	height: 178px;
 }
 
 div.homepage_post:nth-child(23n+7){
 	width: 172px;
 	float: left;
 	margin: 0 8px 70px 0;
+	height: 116px;
 	
 }
 
@@ -376,7 +399,7 @@ div.homepage_post:nth-child(23n+8){
 	width: 172px;
 	float: left;
 	margin: 0 8px 70px 210px;
-	height: 188px;
+	height: 116px;
 
 	
 }
@@ -385,6 +408,7 @@ div.homepage_post:nth-child(23n+9){
 	width:352px;
 	float: left;
 	margin: 0 8px 70px 0;
+	height: 240px;
 	
 }
 
@@ -392,84 +416,98 @@ div.homepage_post:nth-child(23n+10){
 	width: 172px;
 	float: left;
 	margin: 0 0px 10px 120px;
+	height: 116px;
 }
 
 div.homepage_post:nth-child(23n+11){
 	width: 172px;
 	float: left;
 	margin: 0 0px 70px 120px;
+	height: 116px;
 }
 
 div.homepage_post:nth-child(23n+12){
 	width: 172px;
 	float: left;
 	margin: 0 8px 10px 0;
+	height: 116px;
 }
 
 div.homepage_post:nth-child(23n+13){
 	width:262px;
 	float: left;
 	margin: 0 0px 10px 210px;
+	height: 178px;
 }
 
 div.homepage_post:nth-child(23n+14){
 	width:352px;
 	float: left;
 	margin: 0 8px 70px 0;
+	height: 240px;
 }
 
 div.homepage_post:nth-child(23n+15){
 	width: 172px;
 	float: left;
 	margin: 0 0px 192px 120px;
+	height: 116px;
 }
 
 div.homepage_post:nth-child(23n+16){
 	width:262px;
 	float: left;
 	margin: 0 8px 10px 120px;
+	height: 178px;
 }
 
 div.homepage_post:nth-child(23n+17){
 	width:262px;
 	float: left;
 	margin: 0 0px 10px 0;
+	height: 178px;
 }
 
 div.homepage_post:nth-child(23n+18){
 	width: 172px;
 	float: left;
 	margin: 0 8px 70px 0;
+	height: 116px;
 }
 
 div.homepage_post:nth-child(23n+19){
 	width: 172px;
 	float: left;
 	margin: 0 0px 70px 300px;
+	height: 116px;
 }
 
 div.homepage_post:nth-child(23n+20){
 	width:352px;
 	float: left;
 	margin: 0 8px 10px 0;
+	height: 240px;
 }
 
 div.homepage_post:nth-child(23n+21){
 	width: 172px;
 	float: left;
 	margin: 0 0px 140px 120px;
+	height: 116px;
 }
 
 div.homepage_post:nth-child(23n+22){
 	width: 172px;
 	margin-right: 8px;
 	float: left;
+	height: 116px;
 }
 
 div.homepage_post:nth-child(23n+23){
 	width:262px;
 	float: left;
 	margin: 0 0px 70px 210px;
+	height: 178px;
 }
 
 
@@ -705,15 +743,35 @@ div.shareDownload ul li a{
 	font-weight: normal;
 	font-style: normal;
 	text-decoration: none;
-	margin: 0;
-	padding: 0;
-	margin-right: 25px;
+	margin-right: 20px;
 }
 
 div.shareDownload ul li a:hover{
 	color: #2d2d2d;
 }
 
+
+li.twitter{
+	background: url(images/twitter-bird.gif) no-repeat;
+	height: 15px;
+}
+
+li.pdf{
+	background: url(images/pdf-document.gif) no-repeat;
+	height: 15px;
+}
+
+li.twitter a{
+	margin-left: 20px;
+	padding-top: 2px;
+	float: left;
+}
+
+li.pdf a{
+	margin-left: 18px;
+	padding-top: 2px;
+	float: left;
+}
 
 /* @end */
 
@@ -754,8 +812,6 @@ div.thumbnailContainer {
 }
 
 div.thumbnailContainer img{
-	width: 100%;
-	height: auto;
 	transition: .3s ease-in;
 	-moz-transition: .3s ease-in;
 	-webkit-transition: .3s ease-in;
@@ -1035,18 +1091,6 @@ li.seniorteam a{
 	line-height: 15px;
 }
 
-div.thumbnailContainer {
-	width: 100%;
-	position: relative;
-}
-
-div.thumbnailContainer img{
-	width: 100%;
-	height: auto;
-	transition: .3s ease-in;
-	-moz-transition: .3s ease-in;
-	-webkit-transition: .3s ease-in;
-}
 
 div.thumbnailContainer .thumbnailDescription{
 	display: none;
