--- a/style.css
+++ b/style.css
@@ -337,6 +337,10 @@ img.imagefit{
 
 div.homepage_post{
 	overflow: hidden;
+	-webkit-transition: all 0.2s ease-in-out;
+	-moz-transition: all 0.2s ease-in-out;
+	-o-transition: all 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
 }
 
 
