Clear up of unused files, tidy of general templates, custom news query

--- a/style.css
+++ b/style.css
@@ -585,6 +585,10 @@ body{
     -moz-osx-font-smoothing: grayscale;
 }
 
+li#menu-item-241.menu-item.menu-item-type-custom.menu-item-object-custom.menu-item-home.menu-item-241 {
+	
+}
+
 p{
 	margin-bottom: 1.5em;
 }
