Added sliding scrolling to About page, menu update
Part of the about menu is now manual, potential revisit to see if this
can be added into the WP admin

--- a/style.css
+++ b/style.css
@@ -717,6 +717,7 @@ ul.main_nav li a:hover,
 }
 
 ul.main_nav li.current_page_item a,
+.active,
 li.current-menu-item a,
 ul#menu-about-us.menu li.current_page_item a,
 ul.project_filter li.current-post-parent a{
