--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
-/* @override http://www.architectureplb.com/development/wp-content/themes/theme-plb/style.css */
-
-/* @override http://www.architectureplb.com/development/wp-content/themes/theme-plb/style.css */
-
-/* @override http://www.architectureplb.com/development/wp-content/themes/theme-plb/style.css */
+/*
+Theme Name: Architecture PLB 2013
+Theme URI: http://architectureplb.com
+Description: A custom WP theme for APLB
+Author: Lawrence Brown
+Author URI: http://lawrencebrown.eu
+Version: 1.0
+*/
 
 /* @group RESET */
 
